// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyRepository should fetch a asset data 1`] = `
Array [
  Object {
    "asset_types": Array [
      Object {
        "id": 1,
        "name": "Residential House",
      },
      Object {
        "id": 2,
        "name": "Apartment / Condo",
      },
      Object {
        "id": 3,
        "name": "Villa",
      },
      Object {
        "id": 4,
        "name": "Penthouse",
      },
      Object {
        "id": 5,
        "name": "Studio Apartment",
      },
      Object {
        "id": 6,
        "name": "Independant Floor",
      },
    ],
    "id": 1,
    "name": "Residential",
    "space_types": Array [
      Object {
        "id": 1,
        "name": "Bedroom",
      },
      Object {
        "id": 2,
        "name": "Bathroom",
      },
      Object {
        "id": 3,
        "name": "Balcony",
      },
    ],
  },
  Object {
    "asset_types": Array [
      Object {
        "id": 7,
        "name": "Commercial Office Space",
      },
      Object {
        "id": 8,
        "name": "Office in IT park/SEZ",
      },
      Object {
        "id": 9,
        "name": "Commercial Showroom",
      },
      Object {
        "id": 10,
        "name": "Warehouse / Godown",
      },
    ],
    "id": 2,
    "name": "Commercial",
    "space_types": Array [
      Object {
        "id": 2,
        "name": "Bathroom",
      },
    ],
  },
]
`;

exports[`PropertyRepository should fetch a asset detail 1`] = `
Object {
  "asset_type": "Commercial Showroom",
  "block_number": "#12",
  "carpet_area": "12",
  "carpet_area_unit": "Sqt",
  "floor_number": 2,
  "latitude": 0.9999,
  "longitude": 0.24444,
  "project_name": "Project",
  "total_floors": 5,
  "unit_number": "12",
}
`;

exports[`PropertyRepository should fetch a lease term 1`] = `
Array [
  Object {
    "annual_increment_percentage": 5,
    "available_from_date": "2020-09-12",
    "currency_code": "+91",
    "furnishing_status": "SEMI",
    "id": 1,
    "maintenance_amount": 1,
    "maintenance_paid_by": "OWNER",
    "maintenance_schedule": "MONTHLY",
    "minimum_lease_period": 2,
    "monthly_rent_price": 1200,
    "security_deposit_price": 15000,
    "utility_paid_by": "OWNER",
  },
]
`;

exports[`PropertyRepository should fetch a list of rent services 1`] = `
Array [
  Object {
    "icon": "home-search",
    "id": 1,
    "label": "I want to find tenants",
    "name": "FIND_TENANT",
  },
  Object {
    "icon": "home-calculus",
    "id": 2,
    "label": "I want to sell my property",
    "name": "SELL_PROPERTY",
  },
  Object {
    "icon": "home-person",
    "id": 3,
    "label": "I already have found a tenant",
    "name": "TENANT_FOUND",
  },
]
`;

exports[`PropertyRepository should fetch a sale term 1`] = `
Array [
  Object {
    "available_from_date": "2020-09-12",
    "booking_amount": 500,
    "currency_code": "+91",
    "expected_price": 1200,
    "id": 1,
    "maintenance_amount": 200,
    "maintenance_schedule": "MONTHLY",
    "year_of_construction": 1,
  },
]
`;
